Pre-alpha: burg commands + config + leave